--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -2265,7 +2265,12 @@ button[data-balloon] {
 }
 
 .staking-text {
-  margin-bottom: 48px;
+  text-align: left;
+  margin-bottom: 24px;
+}
+
+.stakepool-info {
+  margin-bottom: 24px;
 }
 
 .staking-form input {
